--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ jobs:
         with:
           node-version: "16.18.0"
       - run: npm ci
+      - run: npm audit fix --force
       - run: npm run format:check
       - run: npm test -- --coverage
         env:
